upload most updated bio site initial files

--- a/index.html
+++ b/index.html
@@ -1,1 +1,75 @@
-<h1>Hello Gorgeous!<h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Richard Santana | Candidate Spotlight</title>
+        <link rel="stylesheet" href="css/normalize.css">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans|Playfair+Display" rel="stylesheet">
+        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/responsive.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    </head>
+    <body>
+        <header>
+            <a href="index.html" id="logo">
+                <h1>Richard Santana test</h1>
+                <h2>Candidate Spotlight</h2>
+            </a>
+            <nav>
+                <ul>
+                <li><a href="index.html" class="selected">Work</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <div id="wrapper">
+            <section>
+                <ul id="gallery">
+                    <li>
+                        <a href="img/numbers-01.jpeg">
+                        <img src="img/numbers-01.jpeg" alt="">
+                        <p>Candidate Spotlight Richard Santana</p>
+                        </a>
+                    </li>
+                    <li>
+                            <a href="img/numbers-05.jpeg">
+                            <img src="img/numbers-05.jpeg" alt="">
+                            <p>Candidate Spotlight #2</p>
+                            </a>
+                        </li>
+                    <li>
+                        <a href="img/numbers-03.jpeg">
+                        <img src="img/numbers-03.jpeg" alt="">
+                        <p>Candidate Spotlight #3</p>
+                        </a>
+                    </li>
+                    <li>
+                            <a href="img/numbers-04.jpeg">
+                            <img src="img/numbers-04.jpeg" alt="">
+                            <p>Candidate Spotlight #4</p>
+                            </a>
+                        </li>
+                    <li>
+                            <a href="img/numbers-02.jpeg">
+                            <img src="img/numbers-02.jpeg" alt="">
+                            <p>Candidate Spotlight #5</p>
+                            </a>
+                        </li>
+                    <li>
+                            <a href="img/numbers-06.JPG">
+                            <img src="img/numbers-06.JPG" alt="">
+                            <p>Candidate Spotlight #6</p>
+                            </a>
+                        </li>
+                </ul>
+            </section>
+            <footer>
+                <a href="http://twitter.com/"><img src="img/twitter-wrap.png" alt="Twitter logo" class="social-icon"></a>
+                <a href="http://facebook.com/"><img src="img/facebook-wrap.png" alt="Facebook logo" class="social-icon"></a>
+                <p>&copy; 2019 Wendy Portillo.</p>
+            </footer>
+        </div>
+        </body>  
+</html>
