revert test change to index page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <header>
             <a href="index.html" id="logo">
-                <h1>Richard Santana test</h1>
+                <h1>Richard Santana</h1>
                 <h2>Candidate Spotlight</h2>
             </a>
             <nav>
