reverted test change to index

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header>
             <a href="index.html" id="logo">
                 <h1>Richard Santana</h1>
-                <h2>Candidate Spotlight does this work?</h2>
+                <h2>Candidate Spotlight</h2>
             </a>
             <nav>
                 <ul>
