About page: change color on quote
I chose a blue color that work best with the BioSite

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
         <div id="wrapper">
             <section>
                 <img src="img/numbers-01.jpeg" alt="Photograph of Richard Santana" class="profile-photo">
-                <h3 style="font-size: 40px"><span style="background-color:darkblue;">“We make a living by what we get, but we make a life by what we give.”
+                <h3 style="font-size: 40px"><span style="background-color:#00336c;">“We make a living by what we get, but we make a life by what we give.”
 
                     Winston Churchill</span></h3>
                 <p>Assembly District 69 is in the heart of Orange County and the center of democracy when it comes to a diverse population seeking representation. My name is Richard Santana and I have lived in Santa Ana all my life. Santa Ana is a city with open arms for inclusivity and representation. My city has taught me the importance of giving back, speaking up for my community and reacting to the injustices in our political climate, which is why I am seeking to be a delegate for the 69TH Assembly District.</p>
